# The-Cosmic-Davis-12D-Hebbian-Transformer-ver.4.2

./: .env  .gitignore  .zenodo.json  CHANGELOG.md  COMPARED.md  CONTRIBUTING.md  CosmoSynapse_Hermes_Quantum_Upgrade_Prompt (1).docx  CosmoSynapse_Swarm_Upgrade_Guide.docx  LICENSE  README.md  SECURITY.md  START.bat  aggregate_graphs.py  analyze_quantum_states.py  audit_results.txt  check.py  check_results.txt  cosmos_check.py  crash_stderr2.txt  cst_synaptic_weights.json  debug_imports_v2.py  decode_all.py  decode_jobs.py  decode_workloads.py  demo_cst.py  extract_workloads.py  find_cns.py  generate_publication.py  genesis_record.md  git_status.txt  hermes_rl_policy.json  hits.txt  html_diff.txt  implementation_plan3333333  import_debug.py  inject_bell.py  inject_orchestrator.py  main.py  openclaw_rl_policy.json  package.json  (+29 more)
.claude/: launch.json  settings.local.json
agent-vault/sdk-python/: pyproject.toml
agent-vault/sdk-python/dropclaw/: __init__.py
arxiv_csai/: generate_arxiv_pdf.py  main.tex  references.bib
configs/: evolution.yaml
cosmos/: README.md  __init__.py  client.py
data/: quantum_benchmark_1773280655.json  quantum_benchmark_1773280884.json  quantum_benchmark_1773288911.json  quantum_benchmark_1773289144.json  quantum_benchmark_1773289384.json  quantum_benchmark_1773289512.json  quantum_benchmark_1773293905.json  quantum_benchmark_1773294001.json  quantum_benchmark_1773294471.json  quantum_benchmark_1773295166.json  quantum_benchmark_1773295244.json  quantum_benchmark_1773295656.json
docker/: Dockerfile
docs/: TECHNICAL_SPEC.md  USER_GUIDE.md
(+14817 files in other folders)
