[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropclaw"
version = "1.0.1"
description = "DropClaw — Permanent Encrypted On-Chain Storage for AI Agents on Monad"
readme = {text = "DropClaw — Permanent Encrypted On-Chain Storage for AI Agents on Monad. Visit https://dropclaw.cloud", content-type = "text/plain"}
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Farnsworth"}]
keywords = ["dropclaw", "blockchain", "storage", "encryption", "monad", "ai-agents", "x402", "on-chain"]
dependencies = []

[project.urls]
Homepage = "https://dropclaw.cloud"

[tool.setuptools.packages.find]
include = ["dropclaw"]

[tool.setuptools.package-data]
dropclaw = ["__init__.py"]
